--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <div class="offer-container">
     <h2>বিশেষ FREE অফার—সীমিত সময়ের জন্য</h2>
     <p>[Insert Your Text Here]</p>
-    <p class="important"><strong>আর অপেক্ষা করো না</strong>—এই সীমিত সময়ের অফারটি কাজে লাগাও ও কয়েক সপ্তাহের মধ্যে পড়াশোনায় তোমার উন্নতি লক্ষ্য করো।</p>
+    <p class="important"><strong>আর অপেক্ষা কোরো না</strong>—এই সীমিত সময়ের অফারটি কাজে লাগাও ও কয়েক সপ্তাহের মধ্যে পড়াশোনায় তোমার উন্নতি লক্ষ্য করো।</p>
 </div>
 
 
