--- a/index.html
+++ b/index.html
@@ -137,8 +137,37 @@
 
 <div class="offer-container">
     <h2>বিশেষ FREE অফার—সীমিত সময়ের জন্য</h2>
-    <p>[Insert Your Text Here]</p>
-    <p class="important"><strong>আর অপেক্ষা কোরো না</strong>—এই সীমিত সময়ের অফারটি কাজে লাগাও ও কয়েক সপ্তাহের মধ্যে পড়াশোনায় তোমার উন্নতি লক্ষ্য করো।</p>
+    <p style="font-size: 18px; color: #333;">StudyAssist.online-এ স্বাগতম – আমরা তোমার একাডেমিক সাহায্যের ডেস্ক!</p>
+
+            <p style="font-size: 18px; color: #333;"><b>"পড়াশোনার সমস্যায় পড়েছো? এখনই বিশেষজ্ঞদের সাহায্য নাও!"</b></p>
+
+            <p style="text-align:left; font-size: 18px;">তুমি কি পড়াশোনায় সমস্যার সম্মুখীন হচ্ছো? কোনো জটিল বিষয় বোঝা থেকে শুরু করে কঠিন কোনো প্রশ্ন বা সমস্যার সমাধান করা কিংবা পড়াশোনার চাপ সামলানো—আমরা তোমার পাশে আছি।</p>
+            <p style="text-align:left; font-size: 18px;">নিচের ফর্মটা পূরণ করো, আর আমাদের বিশেষজ্ঞ দল তোমার জন্য ব্যক্তিগত পরামর্শ দেবে যাতে তুমি যে কোনো পড়াশোনার চ্যালেঞ্জ কাটিয়ে উঠতে পারো। তোমার সফলতায় AI এবং মানুষের দক্ষতার সমন্বয়ে আমরা তোমাকে সহায়তা করতে বদ্ধপরিকর!</p>
+
+
+
+        <h3 style="color: #d9534f;">"তোমার একাডেমিক সমস্যাগুলো আমাদেরকে জানাও, আর আমরা তোমাকে তোমার জন্যে সেরা সমাধান খুঁজতে সাহায্য করবো।"</h3>
+
+        <p style="font-size: 16px; text-align:left;">StudyAssist.online-এ আমরা বুঝি যে প্রতিটি শিক্ষার্থীর পড়াশোনার আলাদা আলাদা চ্যালেঞ্জ থাকে। কঠিন অ্যাসাইনমেন্ট হোক, জটিল বিষয়বস্তু বোঝা হোক, বা তোমার পড়াশোনার সময়সূচি সামলানো—আমরা তোমার জন্য আছি। আমাদের সহজ ফর্মে তোমার সমস্যা বিস্তারিতভাবে বর্ণনা করতে পারবে, আর আমাদের বিশেষজ্ঞ দল তোমাকে সেরা সমাধান দেবে, যা একেবারে তোমার জন্য তৈরি করা।</p>
+
+        <h4>এটা কিভাবে কাজ করে:</h4>
+        <ul style="text-align:left; font-size: 16px;">
+            <li><strong>তোমার সমস্যা জমা দাও:</strong> তোমার পড়াশোনার সমস্যার বিস্তারিত তথ্য ফর্মে পূরণ করো।</li>
+            <li><strong>বিশেষজ্ঞ পরামর্শ নাও:</strong> আমাদের দল তোমার জমা দেওয়া সমস্যার পর্যালোচনা করবে এবং পরামর্শ পাঠাবে।</li>
+            <li><strong>সফলতা অর্জন করো:</strong> দেওয়া নির্দেশিকা এবং কৌশলগুলো ব্যবহার করে তোমার সমস্যা কাটিয়ে ওঠো এবং পড়াশোনায় উন্নতি করো।</li>
+        </ul>
+
+        <h3 style="text-align: center;">"সমস্যা আছে? নিচের তথ্যগুলো পূরণ করো, তারপর সেগুলিকে আমাদের হোয়াটসঅ্যাপ নম্বরে পাঠিয়ে দাও!"</h3>
+
+<ol style="text-align:left;">
+        <li>তোমার নাম</li>
+        <li>তুমি কোন ক্লাসে পড়ছো</li>
+        <li>তোমার ইমেল</li>
+        <li>তোমার পড়াশোনা সংক্রান্ত সমস্যা বা বিষয়ের নাম</li>
+        <li>তোমার পড়াশোনা সংক্রান্ত সমস্যার বিস্তারিত বিবরণ</li>
+</ol>
+
+    <p class="important"><strong>আর অপেক্ষা করো না</strong> — এই সীমিত সময়ের অফারটি কাজে লাগাও ও কয়েক সপ্তাহের মধ্যে পড়াশোনায় তোমার উন্নতি লক্ষ্য করো।</p>
 </div>
 
 
