--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <body>
     <div>
 
-        <h1 style="color: #a00000;">StudyAssist.online</h1>
+        <h1 style="font-size: 28px; color: #a00000;">StudyAssist.online</h1>
         <p style="text-align: left; margin-top: -20px;"><b>Your Academic Challenges, Solved – Expert Help at Your Fingertips! (FREE for Limited Time)</b></p>
 
 <div class="offer-container">
