--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <li>🎓 <strong>নিজের পড়াশোনা কন্ট্রোল করুন:</strong> সঠিক প্রশ্নের মাধ্যমে দক্ষতা বাড়ান।</li>
         </ul>
 
-        <a href="#" class="cta-button">এখনই ডাউনলোড করুন</a>
+        <a href="https://wa.link/8z1wpr" class="cta-button">এখনই ডাউনলোড করুন</a>
     </section>
 <div style="padding-top: 100px"></div>
     <footer>
