--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             bottom: 0;
         }
     </style>
+<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=671abfcf10ca00001277ad2a&product=sticky-share-buttons&source=platform" async="async"></script>
 </head>
 <body>
     <header>
@@ -111,6 +112,7 @@
         <a href="https://wa.link/9cee52" class="cta-button">এখনই ডাউনলোড করুন</a>
     </section>
 <div style="padding-top: 100px"></div>
+<div class="sharethis-sticky-share-buttons"></div>
     <footer>
         <p>কপিরাইট &copy; 2024 StudyAssist.online | সমস্ত অধিকার সংরক্ষিত</p>
     </footer>
