--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             bottom: 0;
         }
     </style>
-<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=671abfcf10ca00001277ad2a&product=sticky-share-buttons&source=platform" async="async"></script>
+<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=671ac0c110ca00001277ad2b&product=sop' async='async'></script>
 </head>
 <body>
     <header>
